crates/vexor-compiler/tests/golden/error/input/conditional.vx
val r = 100
val c = Circle(r)
-- no arm matches r = 100
val scaled = match r {
    50 => scale(0.5, c),
    200 => scale(2.0, c)
}
export scaled
